--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,6 +1,5 @@
 name: ROOT
 title: Test 1 Documentation
 start_page: ROOT::index.adoc
-# version: 'One'
-# nav:
-#   - nav.adoc
+content:
+  start_page: "index.adoc" 
