--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -3,4 +3,4 @@ title: Test 1 Documentation
 version: ~
 start_page: 'named-module:index.adoc'
 nav:
-  - 'named-module:nav.adoc'
+  - modules/named-module/nav.adoc
