--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -2,3 +2,6 @@ name: test1
 title: Test 1 Documentation
 version: ~
 start_page: 'named-module:index.adoc'
+nav:
+- title: 'Whatever'
+  url: 'named-module:index1.adoc'
