--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -4,4 +4,4 @@ version: ~
 start_page: 'named-module:index.adoc'
 nav:
 - title: 'Whatever'
-  url: 'named-module:index1.adoc'
+  url: 'named-module:pages/index1.adoc'
