--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -3,5 +3,4 @@ title: Test 1 Documentation
 version: ~
 start_page: 'named-module:index.adoc'
 nav:
-- title: 'Whatever'
-  url: 'named-module:pages/index1.adoc'
+- modules/named-module/nav.adoc
