--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -2,9 +2,5 @@ name: test1
 title: Test 1 Documentation
 version: ~
 start_page: 'named-module:index.adoc'
-
-name: test
-title: Test 
-version: ~
-start_page: 'named-module:index1.adoc'
+ - 'named-module:index1.adoc'
 
