--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -2,9 +2,7 @@ name: test1
 title: Test 1 Documentation
 version: ~
 start_page: 'named-module:index.adoc'
- 
-modules:
-  - name: named-module
-    pages:
-      - index.adoc
-      - index1.adoc
+pages:
+  - title: "Page 2"
+    file: "index1.adoc"
+
