--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -2,4 +2,5 @@ name: test1
 title: Test 1 Documentation
 version: ~
 start_page: 'named-module:index.adoc'
-
+nav:
+- 'modules/named-module/pages/nav.adoc'
